# pymcel

./: .getbranch.sh  .gitignore  .packrc  .release.sh  .versions  LICENSE  NB1-TransformacionesLorentizEinsteins.ipynb  README.md  TODO.md  WHATSNEW.md  makefile  pyproject.toml  release.sh  setup.py  test-pymcel.ipynb
ejemplos/: Asteroide_2024YR4.ipynb  atico.ipynb  pymcel-decarga-kernels.ipynb  pymcel-descarga-kernels.ipynb  pymcel-primeros-pasos.ipynb
ejemplos/cuadernos-libro/: README.md  mcel_zuluaga-00-FeDeErratas.ipynb  mcel_zuluaga-01-introduccion.ipynb  mcel_zuluaga-02-vectores_calculo.ipynb  mcel_zuluaga-03-series_infinitas.ipynb  mcel_zuluaga-04-calculo_variacional.ipynb  mcel_zuluaga-05-conicas_basico.ipynb  mcel_zuluaga-06-conicas_espacio.ipynb  mcel_zuluaga-07-mecanica_newtoniana.ipynb  mcel_zuluaga-08-dinamica_sistemas_rotantes.ipynb  mcel_zuluaga-09-ncuerpos_general.ipynb  mcel_zuluaga-10-ncuerpos_solucion_numerica.ipynb  mcel_zuluaga-11-doscuerpos.ipynb  mcel_zuluaga-11-doscuerpos_motivacion_a_orbita_osculatriz.ipynb  mcel_zuluaga-12-doscuerpos_ecuacion_kepler.ipynb  mcel_zuluaga-13-doscuerpos_sintesis_y_especiales.ipynb  mcel_zuluaga-14-trescuepos-basico.ipynb  mcel_zuluaga-15-trescuerpos_constante_jacobi.ipynb  mcel_zuluaga-16-trescuerpos_regiones_exclusion.ipynb  mcel_zuluaga-17-trescuerpos_potencial_modificado.ipynb  mcel_zuluaga-18-trescuerpos_puntos_equilibiro.ipynb  mcel_zuluaga-19-trescuerpos_aplicaciones.ipynb  mcel_zuluaga-21-lagrangiano_fuerzas_centrales.ipynb  mcel_zuluaga-calculo_variacional.ipynb  mcel_zuluaga-conicas_basico.ipynb  mcel_zuluaga-introduccion.ipynb  mcel_zuluaga-plantilla.ipynb  mcel_zuluaga-prefacio.ipynb  mcel_zuluaga-series_infinitas.ipynb  mcel_zuluaga-vectores_calculo.ipynb
ejemplos/cuadernos-libro/pymcel/data/: mcel_zuluaga-plantilla.ipynb
src/pymcel/: .export.py  __init__.py  constantes.py  extra.py  plot.py  version.py
src/pymcel/data/: JupiterComets.csv  NEOs.csv  de430.tpc  de430_tech-comments.txt  earth_000101_150930_150710.bpc  earth_latest_high_prec.bpc  kernels  kernels.txt  masses.txt  pck00010.tpc
